[B]Version 1.1.101[/B]
- Americass - fix playback
- SextB - fix playback