@@ -24,7 +24,7 @@ from resources.lib import utils
 from resources.lib.adultsite import AdultSite
 from six.moves import urllib_parse
 
-site = AdultSite('netflav', '[COLOR hotpink]Netflav[/COLOR]', 'https://netflav.com/', 'https://netflav.com/static/assets/logo.svg', 'netflav')
+site = AdultSite('netflav', '[COLOR hotpink]Netflav[/COLOR]', 'https://netflav.com/', 'https://netflav.com/static/assets/logo.png', 'netflav')
 
 
 def make_netflav_headers():
@@ -129,7 +129,7 @@ def Playvid(url, name, download=None):
         if vp.bypass_hosters_single(link):
             continue
         if vp.resolveurl.HostedMediaFile(link).valid_url():
-            links[link] = link
+            links[utils.get_vidhost(link)] = link
 
     videourl = utils.selector('Select link', links)
     if not videourl:
